--- a/src/pages/user/Cart.css
+++ b/src/pages/user/Cart.css
@@ -13,16 +13,18 @@ text-align: center;
 }
 
 .cart-list {
+  display: flex;
+  flex-direction: column;
   border: 1px solid #333;
   border-radius: 8px;
   padding: 16px;
   background: #fff;
+  gap: 10px;
 }
 
 .cart-item {
   display: flex;
   align-items: center;
-  margin-bottom: 8px;
   background: #fafafa;
   border-radius: 10px;
   box-shadow: 0 2px 8px #eee;
